# talk-to-your-data-lab

./: .env.example  .eval-baseline.json  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  demo_key_accounts.md  docker-compose.yml  jira-tasks.md  pyproject.toml
.claude/: settings.json
.claude/agents/: chart-designer.md  code-reviewer.md  developer.md  docs-writer.md  release-notes.md  sql-reviewer.md  test-writer.md
.claude/hooks/: advisory-review.sh  docs-drift.sh  lint-and-format.sh  pytest-quick.sh
.claude/skills/add-tool/: SKILL.md
.claude/skills/daily-standup/: SKILL.md
.claude/skills/new-question/: SKILL.md
.claude/skills/pr-prep/: SKILL.md
.claude/skills/run-eval/: SKILL.md
.claude/skills/security-sweep/: SKILL.md
.claude/skills/seed-data/: SKILL.md
.claude/skills/triage/: SKILL.md
.claude/skills/weekly-update/: SKILL.md
.github/workflows/: claude-review.yml  claude-review.yml.disabled  eval-regression.yml  issue-to-pr.yml  issue-to-pr.yml.disabled  nightly-doc-sync.yml  release-notes.yml
app/: streamlit_app.py
docs/: concept.md  demo-script.md  sdlc-metrics.csv  sdlc-slide.md
evals/: __init__.py  questions.yaml  run_evals.py
kb/: glossary.md  metrics.md  ops_runbook.md
mcp_servers/: __init__.py  postgres_readonly.py
src/genbi/: __init__.py  agent.py  cli.py  db.py  events.py  kb.py  kb_ingest.py  safety.py  seed.py  seed_kb.py  tools.py
src/genbi/ui/: __init__.py  render.py  runtime.py
tests/: test_agent.py  test_cli.py  test_kb.py  test_kb_ingest.py  test_safety.py  test_tools.py
